--- a/static/css/pracdb.css
+++ b/static/css/pracdb.css
@@ -1,7 +1,4 @@
-html, body {
-    margin: 0px;
-}
-.container {
+.user-table-container {
     padding: 5px;
 }
 .users-ul {
@@ -23,4 +20,17 @@ html, body {
 .users-a-list {
     padding: 20px;
     text-decoration: none;
+}
+
+.user-table-container table {
+    width: 80%;
+    border: 1px solid #444444;
+    border-collapse: collapse;
+    margin: auto;
+}
+
+.user-table-container th, 
+.user-table-container td {
+    border: 1px solid #444444;
+    padding: 5px;
 }
