--- a/static/css/head.css
+++ b/static/css/head.css
@@ -1,3 +1,13 @@
+html, body {
+    margin: 0px;
+}
+ol, ul, li {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: black;
+}
 #navigation {
     background-color: #FFFFFF;
     position: sticky;
